fix: v-control z-index

--- a/src/components/slider/v-control/v-control.module.scss
+++ b/src/components/slider/v-control/v-control.module.scss
@@ -2,6 +2,7 @@
 
 .vcontrol {
   position: relative;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   grid-area: vcontrol;
